--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,30 @@
-version: '3'
+version: '2.4'
+
 services:
-    app:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        ports:
-            - "8000:8000" # Adjust port as needed
-        volumes:
-            - .:/var/www/html
-        depends_on:
-            - db
-    db:
-        image: postgres
-        environment:
-            POSTGRES_DB: pokerWebsite
-            POSTGRES_USER: pWUser
-            POSTGRES_PASSWORD: yourdbpassword
+  #########################################
+  #          Poker Website royalflushsaga #
+  #########################################
+  web:
+    image: dockerregistry.artindustrial-it.com/paulhager/pokerwebsite
+    container_name: pokerwebsite_app
+    hostname: pokerwebsite
+    restart: unless-stopped
+    volumes: [ ]
+    networks:
+      - proxy
+  db:
+    image: postgres:14.4
+    hostname: db
+    container_name: pokerwebsite_db
+    environment:
+      POSTGRES_DB: pokerWebsite
+      POSTGRES_USER: pWUser
+      POSTGRES_PASSWORD: yourdbpassword
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+networks:
+  proxy:
+    name: proxy
+volumes:
+  postgres_data:
+    driver: local
