updated docker-compose.yml: added db to proxy network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       POSTGRES_DB: pokerWebsite
       POSTGRES_USER: pWUser
       POSTGRES_PASSWORD: yourdbpassword
+    networks:
+      - proxy
     volumes:
       - postgres_data:/var/lib/postgresql/data
 networks:
